--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,10 @@
   position: relative;
   top: 25vh;
 }
-.colors > * {
+.history {
+  margin: 20px;
+}
+.colorRow > * {
   display: inline-block;
   width: 50px;
   height: 50px;
