--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,18 @@
 }
 .container {
   position: relative;
-  top: 25vh;
+  top: 15vh;
 }
 .history {
   margin: 20px;
 }
+.colorRow {
+  margin: 10px;
+}
 .colorRow > * {
   display: inline-block;
+}
+.colorRow .color {
   width: 50px;
   height: 50px;
   border: 1px #000000 solid;
